<resources>
    <string name="app_name">Snooker Score</string>

    <string name="reset">Reset</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="foul_4">Foul 4 points</string>
    <string name="foul_5">Foul 5 points</string>
    <string name="foul_6">Foul 6 points</string>
    <string name="foul_7">Foul 7 points</string>
</resources>
