<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.snookerscore.MainActivity">


    <!-- Players score -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">


        <!-- Player 1 -->
        <RelativeLayout
            android:id="@+id/player_1_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ronnie"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/player_1"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/player_1_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="80sp" />

            <ImageView
                android:id="@+id/set_player_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark" />
        </RelativeLayout>

        <!-- Player 2 -->
        <RelativeLayout
            android:id="@+id/player_2_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignRight="@id/player_1_layout"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/mark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/player_2"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/player_2_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="80sp" />

            <ImageView
                android:id="@+id/set_player_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent" />
        </RelativeLayout>

    </LinearLayout>

    <!-- Score Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <!-- Color Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:background="@drawable/snooker_table"
            android:paddingLeft="35dp">

            <Button
                android:id="@+id/button_red"
                android:background="@drawable/shape_red"
                style="@style/CustomHorizontalButtonStyle" />

            <Button
                android:id="@+id/button_black"
                android:background="@drawable/shape_black"
                style="@style/CustomHorizontalButtonStyle"/>

            <Button
                android:id="@+id/button_pink"
                android:background="@drawable/shape_pink"
                style="@style/CustomHorizontalButtonStyle"/>

            <Button
                android:id="@+id/button_blue"
                android:background="@drawable/shape_blue"
                style="@style/CustomHorizontalButtonStyle"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_yellow"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_yellow"
                    style="@style/CustomVerticalButtonStyle"/>

                <Button
                    android:id="@+id/button_brown"
                    android:background="@drawable/shape_brown"
                    style="@style/CustomVerticalButtonStyle"/>

                <Button
                    android:id="@+id/button_green"
                    android:background="@drawable/shape_green"
                    style="@style/CustomVerticalButtonStyle"/>


            </LinearLayout>


        </LinearLayout>

        <!-- Foul Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button
                android:id="@+id/button_foul4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/foul_4"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_foul5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/foul_5"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_foul6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/foul_6"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_foul7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/foul_7"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>


    <!-- Reset Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:text="Reset"
            android:textAllCaps="true" />
    </LinearLayout>


</LinearLayout>
